--- a/index3.html
+++ b/index3.html
@@ -10,20 +10,26 @@
             font-size: 60pt;
         }
 
-        div.gearshifter {
+        button {
+            font-size: 50pt;
+            background-color: #333333;
+            color: white;
+        }
+
+        #gearshifter {
             background-color: black;
             color: white;
             padding-top: 120px;
             padding-left: 80px;
-            width: 400px;            
-            height: 360px;            
+            width: 400px;
+            height: 360px;
             border-radius: 50%;
             border: 1px solid black;
             display: grid;
             flex-direction: column;
             grid-template-columns: repeat(8, 40px);
             grid-template-rows: repeat(6, 40px);
-            grid-template-areas: 
+            grid-template-areas:
                 "gearR gearR gear1 gear1 gear3 gear3 gear5 gear5"
                 "gearR gearR gear1 gear1 gear3 gear3 gear5 gear5"
                 "a b c d e f g h"
@@ -33,55 +39,102 @@
             ;
         }
 
-        div.gearshifter > div {
+        #gearshifter>div {
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        div.left{
+        div.left {
             border-left: 2px solid white;
         }
-        div.right{
+
+        div.right {
             border-right: 2px solid white;
         }
-        div.top{
+
+        div.top {
             border-top: 2px solid white;
         }
-        div.bottom{
+
+        div.bottom {
             border-bottom: 2px solid white;
+        }
+
+        .selected {
+            border: 3px dashed hotpink;
         }
     </style>
 </head>
 
 <body>
-    <h1>Pause til 13:30</h1>
-    <div class="gearshifter">
-        <div style="grid-area: gearR;">R</div>
-        <div style="grid-area: gear1;">1</div>
-        <div style="grid-area: gear2;">2</div>
-        <div style="grid-area: gear3;">3</div>
-        <div style="grid-area: gear4;">4</div>
-        <div style="grid-area: gear5;">5</div>
-        <div style="grid-area: gear6;">6</div>
-        <div style="grid-area: a"></div>
-        <div style="grid-area: b" class="left bottom"></div>
-        <div style="grid-area: c"  class="right bottom"></div>
-        <div style="grid-area: d" class=" bottom"></div>
-        <div style="grid-area: e" class=" bottom right"></div>
-        <div style="grid-area: f" class=" bottom"></div>
-        <div style="grid-area: g" class=" bottom right"></div>
-        <div style="grid-area: h"></div>
-        <div style="grid-area: i"></div>
-        <div style="grid-area: j"></div>
-        <div style="grid-area: k" class="right "></div>
-        <div style="grid-area: l"></div>
-        <div style="grid-area: m" class=" right"></div>
-        <div style="grid-area: n"></div>
-        <div style="grid-area: o" class=" right"></div>
-        <div style="grid-area: p"></div>
-        <div style="grid-area: x"></div>
+    <div id="gearshifter">
     </div>
+    <script>
+        showGearshifterNeutral();
+        function showGearshifterNeutral() {
+            document.getElementById('gearshifter').innerHTML = /*HTML*/`
+                <button style="grid-area: gearR;">R</button>
+                <button style="grid-area: gear1;" onclick="showGearshifter1()">1</button>
+                <button style="grid-area: gear2;">2</button>
+                <button style="grid-area: gear3;">3</button>
+                <button style="grid-area: gear4;">4</button>
+                <button style="grid-area: gear5;">5</button>
+                <button style="grid-area: gear6;">6</button>        
+            `;
+            showGearshifterLines();
+        }
+
+        function showGearshifter1() {
+            document.getElementById('gearshifter').innerHTML = /*HTML*/`
+                <div style="grid-area: gearR;">R</div>
+                <button style="grid-area: gear1;" >1</div>
+                <button style="grid-area: gear2;"  onclick="showGearshifter2()">2</button>
+                <div style="grid-area: gear3;">3</div>
+                <div style="grid-area: gear4;">4</div>
+                <div style="grid-area: gear5;">5</div>
+                <div style="grid-area: gear6;">6</div>  
+                <button style="grid-area: x"  onclick="showGearshifterNeutral()">N</button>                  
+            `;
+            showGearshifterLines();
+        }
+
+        function showGearshifter2() {
+            document.getElementById('gearshifter').innerHTML = /*HTML*/`
+                <div style="grid-area: gearR;">R</div>
+                <button style="grid-area: gear1;"  onclick="showGearshifter1()">1</button>
+                <div style="grid-area: gear2;" class="selected">2</div>
+                <button style="grid-area: gear3;"  onclick="showGearshifter3()">3</button>
+                <div style="grid-area: gear4;">4</div>
+                <div style="grid-area: gear5;">5</div>
+                <div style="grid-area: gear6;">6</div>  
+                <button style="grid-area: x" onclick="showGearshifterNeutral()">N</button>            
+      
+            `;
+            showGearshifterLines();
+        }
+
+        function showGearshifterLines() {
+            document.getElementById('gearshifter').innerHTML += /*HTML*/`
+                <div style="grid-area: a"></div>
+                <div style="grid-area: b" class="left bottom"></div>
+                <div style="grid-area: c" class="right bottom"></div>
+                <div style="grid-area: d" class=" bottom"></div>
+                <div style="grid-area: e" class=" bottom right"></div>
+                <div style="grid-area: f" class=" bottom"></div>
+                <div style="grid-area: g" class=" bottom right"></div>
+                <div style="grid-area: h"></div>
+                <div style="grid-area: i"></div>
+                <div style="grid-area: j"></div>
+                <div style="grid-area: k" class="right "></div>
+                <div style="grid-area: l"></div>
+                <div style="grid-area: m" class=" right"></div>
+                <div style="grid-area: n"></div>
+                <div style="grid-area: o" class=" right"></div>
+                <div style="grid-area: p"></div>
+            `;
+        }
+    </script>
 </body>
 
 </html>
